--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-.venv
 .env
+.venv/
+.idea
+**/__pycache__/
+**/*.py[cod]
+.DS_Store
+**/.DS_Store
+
+**/debug_data/
+/recommender/.ipynb_checkpoints/
