--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "streamlit (>=1.52.2,<2.0.0)",
     "requests (>=2.32.5,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)"
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "plotly (>=6.5.1,<7.0.0)"
 ]
 
 
