--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ numpy==2.4.0 ; python_version >= "3.11"
 packaging==25.0 ; python_version >= "3.11"
 pandas==2.3.3 ; python_version >= "3.11"
 pillow==12.0.0 ; python_version >= "3.11"
+plotly==6.5.1 ; python_version >= "3.11"
 protobuf==6.33.2 ; python_version >= "3.11"
 pyarrow==22.0.0 ; python_version >= "3.11"
 pydeck==0.9.1 ; python_version >= "3.11"
